# pedroclaw

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  import  pricing-comparison-brl.md  pyproject.toml
.claude/skills/review-team/: AGENTS.md
.claude/skills/review-team/references/: squad-xi.md
.githooks/: commit-msg
config/: default.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: QueuePanel.tsx  ReviewTable.tsx  StatsCards.tsx
frontend/src/hooks/: useDashboard.ts
frontend/src/types/: dashboard.ts
scripts/: sync_labels.py
skills/(code-review)/review-team/: SKILL.md
skills/(code-review)/review-team/references/: rules-discovery.md  specialists.md
src/pedroclaw/: __init__.py  config.py  database.py  main.py  observability.py
src/pedroclaw/agents/: engine.py  llm.py  models.py  reviewer.py  triage.py
src/pedroclaw/dashboard/: models.py  router.py  store.py
src/pedroclaw/gitlab/: client.py
src/pedroclaw/knowledge/: agno_kb.py  agno_store.py  ingestion.py  models.py  retrieval.py  store.py
src/pedroclaw/squad/: skills.py  xi.py
src/pedroclaw/tasks/: worker.py
src/pedroclaw/webhooks/: handlers.py  router.py
src/pedroclaw/workflow/: states.py
tests/: conftest.py  test_agno_integration.py  test_agno_knowledge.py  test_agno_models.py  test_squad_review.py  test_webhooks.py  test_workflow.py
